<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item
             android:title="@string/action_point"
             android:orderInCategory="3"
             android:id="@+id/btnPoint"
             android:icon="@drawable/point"
             app:showAsAction="always"/>

    <item
            android:title="@string/action_rectangle"
            android:orderInCategory="4"
            android:id="@+id/btnRect"
            android:icon="@drawable/rectangle"
            app:showAsAction="always"/>

    <item
            android:title="@string/action_square"
            android:orderInCategory="5"
          android:id="@+id/btnSquare"
          android:icon="@drawable/square"
          app:showAsAction="always"/>…

    <item android:title="@string/action_ellipse"
          android:orderInCategory="6"
          android:id="@+id/btnEllipse"
          android:icon="@drawable/ellipse"
          app:showAsAction="always"/>
    
    <item android:title="@string/action_cube"
          android:orderInCategory="6"
          android:id="@+id/btnCube"
          android:icon="@drawable/cube"
          app:showAsAction="always"/>
    
    <item android:title="@string/action_lineOO"
          android:orderInCategory="6"
          android:id="@+id/btnLineOO"
          android:icon="@drawable/line00"
          app:showAsAction="always"/>

    <item android:title="@string/action_line"
          android:orderInCategory="2"
          android:id="@+id/btnLine"
          android:icon="@drawable/line"
          app:showAsAction="always"/>

    <item android:id="@+id/action_line"
          android:title="@string/action_line"
          android:orderInCategory="104"
          app:showAsAction="never" />

    <item android:id="@+id/action_point"
          android:title="@string/action_point"
          android:orderInCategory="104"
          app:showAsAction="never" />

    <item android:id="@+id/action_rectangle"
          android:title="@string/action_rectangle"
          android:orderInCategory="104"
          app:showAsAction="never" />

    <item android:id="@+id/action_square"
        android:title="@string/action_square"
        android:orderInCategory="104"
        app:showAsAction="never" />

    <item android:id="@+id/action_ellipse"
        android:title="@string/action_ellipse"
        android:orderInCategory="104"
        app:showAsAction="never" />
    
    <item android:id="@+id/action_cube"
          android:title="@string/action_cube"
          android:orderInCategory="104"
          app:showAsAction="never" />
    
    <item android:id="@+id/action_lineOO"
          android:title="@string/action_lineOO"
          android:orderInCategory="104"
          app:showAsAction="never" />
</menu>